--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=5000
-SERVER_DB=api-db.vrhia.mongodb.net
-DATABASE_NAME=api-db
-USER_DB=jimmyegc
-PASSWORD_DB=4jMnuDVFS6mnuruX
+PORT=
+SERVER_DB=
+DATABASE_NAME=
+USER_DB=
+PASSWORD_DB=
