--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=
-SERVER_DB=
-DATABASE_NAME=
-USER_DB=
-PASSWORD_DB=
+PORT=5000
+SERVER_DB=api-db.vrhia.mongodb.net
+DATABASE_NAME=adopcion
+USER_DB=menikmati
+PASSWORD_DB=FJsmviAY2zGDv45w
