--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "node --inspect --watch-path=./ ./src/app.js",
     "start": "node ./src/app.js"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.12.1"
   }
 }
